--- a/pages/productos.html
+++ b/pages/productos.html
@@ -63,7 +63,7 @@
     
             <div class="product-container">
                 <h3 class="texto.producto d-flex justify-content-center"> Figura Tanjiro </h3>
-                <img src="/img/productos/tanjiro.figura.webp" />
+                <img src="../img/productos/tanjiro.figura.webp" />
                 <h1>$2750</h1>
                 <button class="button-add" onclick="add('product-2', 300)">Agregar</button>
             </div>
