--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -46,6 +46,7 @@
          </nav>
        </header> 
        <mai class="main.preguntas"> 
+           <h1 class="d-flex justify-content-center p-5">PREGUNTAS FRECUENTES</h1>
         
         <section class="container"> 
           <div class="div.p accordion" id="accordionExample">
