--- a/pages/preguntas.html
+++ b/pages/preguntas.html
@@ -4,6 +4,8 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+        <meta name="description" content="Accede a las respuestas de las preguntas mas frecuentes">
+    <meta name="keywords" content="Anime, Dragon Ball Z, Naruto, Pokemon, Demon Slayer, Productos Anime, Attack On Titan ">
     <title>SR | Anime | Preguntas</title>
     <link rel="icon" href="../img/16x16_ivan.png"> 
     <!-- CSS only -->
